<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.ibdnmgps.childtracker2.PhoneNumber"
tools:layout_editor_absoluteY="81dp"
tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="180dp"
        android:allowUndo="true"
        android:ems="10"
        android:hint="@string/text_phone_number_eg"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_num_label"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/text_phone_number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/text_number"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/text_phone_number" />

    <Button
        android:id="@+id/save1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="214dp"
        android:layout_height="64dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="save"
        android:text="@string/start_up_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_number" />

    <TextView
        android:id="@+id/welcome4"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/start_up_welcome"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/phone_num_label"
        tools:layout_editor_absoluteX="0dp"
        tools:text="@string/start_up_welcome" />

    <TextView
        android:id="@+id/mode_label_tv4"
        android:layout_width="fill_parent"
        android:layout_height="16dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="sans-serif-condensed"
        android:foreground="@android:color/background_light"
        android:gravity="center"
        android:shadowColor="@android:color/background_dark"
        android:singleLine="true"
        android:text="@string/mode_parent"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:text="@string/mode_parent" />

</android.support.constraint.ConstraintLayout>

