<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ibdnmgps.childtracker2.Settings">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/settings_time_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/on_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.83"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <Switch
            android:id="@+id/is_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/settings_sms"
            android:textSize="18sp" />

        <Button
            android:id="@+id/pincode_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_light_background"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text="@string/settings_pincode"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveSettings"
            android:text="@string/common_save"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
