<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.ibdnmgps.childtracker2.ConfirmPassword"
tools:layout_editor_absoluteY="81dp"
tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/start_up_password"
        android:inputType="textPassword|number"
        android:maxLength="4"
        android:password="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/save2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="214dp"
        android:layout_height="64dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="confirmPassword"
        android:text="@string/common_next"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
    android:id="@+id/mode_label_tv2"
    android:layout_width="fill_parent"
    android:layout_height="16dp"
    android:layout_marginBottom="1dp"
    android:background="@android:color/holo_orange_dark"
    android:fontFamily="sans-serif-condensed"
    android:foreground="@android:color/background_light"
    android:gravity="center"
    android:shadowColor="@android:color/background_dark"
    android:text="@string/mode_parent"
    android:textAlignment="center"
    android:textColor="@android:color/background_light"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:layout_editor_absoluteX="0dp"
    tools:text="@string/mode_parent"
    tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/start_up_confirm_password"
        android:inputType="number"
        android:password="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/save2"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="0.07"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/confirmpass_title"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="211dp"
        android:layout_height="47dp"
        android:text="@string/confirmpass_subtitle"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>



