<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ibdnmgps.childtracker2.ChildInformation">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="481dp"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/child_pic"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:backgroundTint="@color/cardview_light_background"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_name"
                android:layout_width="61dp"
                android:layout_height="27dp"
                android:text="@string/childInformation_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="36dp" />

            <TextView
                android:id="@+id/ci_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_phone_num"
                android:layout_width="140dp"
                android:layout_height="26dp"
                android:text="@string/childInformation_phone_num"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="63dp" />

            <TextView
                android:id="@+id/ci_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/button7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:onClick="viewCurfew"
            android:text="@string/childInformation_curfew"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/button6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:onClick="viewSafezone"
            android:text="@string/childInformation_safezone"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorLink="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:onClick="viewLocations"
            android:text="@string/childInformation_location"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:background="@android:color/holo_purple"
        android:text="@string/common_parent_mode"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
