<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/child_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/add_child_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/child_num"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                app:ccp_defaultPhoneCode="63" />

            <EditText
                android:id="@+id/child_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/child_name"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/add_child_num"
                android:inputType="phone"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/savechild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/child_num"
            android:layout_below="@+id/child_num"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/common_next"
            android:textColor="@color/cardview_light_background" />

    </LinearLayout>

</RelativeLayout>